[tool.poetry]
name = "face-tracking"
version = "0.1.0"
description = ""
authors = ["Rafał Wójcik <rafal.wojcik@nexio.pl>"]

[tool.poetry.dependencies]
python = "^3.8"
PyOpenGL = "^3.1.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
